--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.0",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongodb": "^6.14.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
