--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.0",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jest": "^29.7.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.1",
+    "mongoose": "^8.12.2",
     "rxjs": "~7.8.0",
+    "supertest": "^7.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
