adding a back server

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "karma-jasmine-html-reporter": "~2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "deno run -A server.mjs & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
