--- a/package.json
+++ b/package.json
@@ -11,25 +11,28 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "loaders.css": "^0.1.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-loaders": "^3.0.1",
-    "react-router-dom": "^7.5.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.86.3",
-    "web-vitals": "^2.1.4",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jest": "^29.7.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "loaders.css": "^0.1.2",
+    "lucide-react": "^0.503.0",
     "mongodb": "^6.14.1",
     "mongoose": "^8.12.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-loaders": "^3.0.1",
+    "react-router-dom": "^7.5.0",
+    "react-scripts": "5.0.1",
     "rxjs": "~7.8.0",
+    "sass": "^1.86.3",
     "supertest": "^7.1.0",
     "tslib": "^2.3.0",
+    "web-vitals": "^2.1.4",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
